- Long-overdue fix to make a party that you joined in this session
  work properly (obscure variable sharing problem).
- 'card merge' series commands actually works instead of disconnecting
  you now, on non-encrypted servers. (But does it still work on
  encrypted servers?)
- Correctly set the field name on aliased novice training fields.

New features:
- Better support for detecting dead players.
- Show player number with emoticons and public chat.
- Show distance with emoticons.
- The uneq command now supports item names.
- You can now specify multiple plugin directories on the commandline.
  Each directory is seperated by a ';' (on Windows) or a ':' (on Unix).
- target_dist range condition for monsters.
- "Player Exists:" and "Player Appeared:" messages moved to domain
  parseMsg_presence/player so you can put it in beepDomains.
- Server disconnections are now immediately detected.
- New command "talknpc <x> <y> <sequence>" for sending a sequence of
  commands to the NPC at <x> <y>. Useful in macros.
- Messages about other players being muted moved to parseMsg_statuslook
  domain with verbosity 2.
- "Unknown error 0" message changed to "Server shutting down".
- The "ignoreInvalidLogin" config option now also ignores incorrect password.
- Messages about other players parseMsg/hairColor and parseMsg/job moved
  to verbosity 2.
- Your account ID is now shown in readable base 10 form on login.
- The inInventory option now checks if you have all of the items in the list.
- "pl" command now displays what shield people are using.
- debugPacket_received 2 option functions like a packet sniffer.
- Detect when another player changes their weapon/shield or headgear.
- Detect what shoes another player is wearing. (It will say "Unknown" if
  you never saw that person walk.)
- Make "Destination reached." command a non-debug message when you arrive
  at a manually input destination.
- Implemented "That person is too far from you to trade." error message.